<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.yjh</groupId>
    <artifactId>netty-server-parent</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <name>netty-server-parent</name>
    <description>netty-server 多模块父项目：动态协议热插拔 TCP 接入服务</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.12</version>
        <relativePath/>
    </parent>

    <modules>
        <module>iot-access</module>
        <module>iot-parser</module>
        <module>cluster-node</module>
        <module>cluster-admin</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
<!--        <maven.compiler.source>21</maven.compiler.source>-->
<!--        <maven.compiler.target>21</maven.compiler.target>-->
        <!-- ✅ 核心修改：直接覆盖 Spring Boot 默认的 java.version -->
        <java.version>21</java.version>
        <!-- 依赖版本集中管理 -->
        <netty.version>4.1.97.Final</netty.version>
        <spring-boot.version>3.2.12</spring-boot.version>
        <lombok.version>1.18.34</lombok.version>
        <logback.version>1.4.14</logback.version>  <!-- 升级 -->
        <fastjson2.version>2.0.5</fastjson2.version>
        <fastjson.version>2.0.5</fastjson.version>
<!--        <jackson.version>2.13.5</jackson.version>-->
        <!-- 移除 spring-data-redis.version 和 spring-web.version -->
        <!-- 移除 mybatis-spring.version -->
        <mybatis-plus.version>3.5.10</mybatis-plus.version>  <!-- 升级 -->
        <postgresql.version>42.7.3</postgresql.version>
        <flyway.version>8.5.13</flyway.version>
        <rocketmq-client-java.version>5.2.0</rocketmq-client-java.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- ============ 第三方依赖（iot-access / iot-parser 共享版本） ============ -->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <!-- ✅ 修改：使用 boot3 专用 starter -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- MyBatis-Plus 3.5.9+ 需单独引入 jsqlparser 模块（分页拦截器依赖） -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-jsqlparser</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.rocketmq</groupId>
                <artifactId>rocketmq-client-java</artifactId>
                <version>${rocketmq-client-java.version}</version>
            </dependency>

            <!-- ============ 内部共享模块 ============ -->
            <dependency>
                <groupId>com.yjh</groupId>
                <artifactId>cluster-node</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

<!--    <build>-->
<!--        <pluginManagement>-->
<!--            <plugins>-->
<!--                <plugin>-->
<!--                    <groupId>org.apache.maven.plugins</groupId>-->
<!--                    <artifactId>maven-compiler-plugin</artifactId>-->
<!--                    <version>3.11.0</version>-->
<!--                    <configuration>-->
<!--                        <source>${maven.compiler.source}</source>-->
<!--                        <target>${maven.compiler.target}</target>-->
<!--                        <encoding>${project.build.sourceEncoding}</encoding>-->
<!--                    </configuration>-->
<!--                </plugin>-->
<!--                <plugin>-->
<!--                    <groupId>org.springframework.boot</groupId>-->
<!--                    <artifactId>spring-boot-maven-plugin</artifactId>-->
<!--                    <version>${spring-boot.version}</version>-->
<!--                </plugin>-->
<!--            </plugins>-->
<!--        </pluginManagement>-->
<!--    </build>-->

</project>
